<resources>
    <string name="app_name">Go Fish</string>
    <string name="record_catch">Record Catch</string>
    <string name="handling_and_conservation">Handling and Conservation</string>
    <string name="habitat_and_range">Habitat and Range</string>
    <string name="feeding_and_food_value">Feeding and Food Value</string>
    <string name="size_and_lifespan">Size and Lifespan</string>
    <string name="taxonomy">Taxonomy</string>
    <string name="common_names">Common Names</string>
    <string name="aqua_lens">Aqua Lens</string>
    <string name="total_catch">Total Catch</string>
    <string name="compass">Compass</string>
    <string name="appearance_and_anatomy">Appearance and Anatomy</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="name">Name</string>
    <string name="general_information">General Information</string>
    <string name="diet">Diet</string>
    <string name="food_value">Food Value</string>
    <string name="health_warnings">Health Warnings</string>
    <string name="depth_range">Depth Range</string>
    <string name="habitat">Habitat</string>
    <string name="distribution">Distribution</string>
    <string name="conservation_status">Conservation Status</string>
    <string name="handling_tip">Handling Tip</string>
    <string name="angler">Angler</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="type">Type</string>
    <string name="weight">Weight</string>
    <string name="maximum_length">Maximum Length</string>
    <string name="lifespan">Lifespan</string>
    <string name="common_length">Common Length</string>
    <string name="reproduction">Reproduction</string>
    <string name="weight_record">Weight Record</string>
    <string name="class_res">Class</string>
    <string name="family">Family</string>
    <string name="genus">Genus</string>
    <string name="kingdom">Kingdom</string>
    <string name="order">Order</string>
    <string name="phylum">Phylum</string>
    <string name="colouration">Colouration</string>
    <string name="dominant_colour">Dominant Colour</string>
    <string name="description">Description</string>
    <string name="likelihood">Likelihood</string>
    <string name="scan_history">Scan History</string>
    <string name="weather">Weather</string>
    <string name="fishing_logs">Fishing Logs</string>
    <string name="maps">Maps</string>
    <string name="past_scans">Past Scans</string>
    <string name="temp">Temp\n(°F)</string>
    <string name="underscore">-</string>
    <string name="no_data">No Data</string>
    <string name="_14_day_forecast">14 Day Forecast</string>
    <string name="no_scans_yet_dive_in_with_aqua_scan_and_reel_in_smart_insights_for_your_next_big_catch">No scans yet? Dive in with Aqua Scan and reel in smart insights for your next big catch!</string>
    <string name="hourly_forecast">Hourly History / Forecast</string>
    <string name="enter_your_next_fishing_destination">Enter your next fishing destination…</string>
    <string name="all_logs">All Logs</string>
    <string name="smart_search">Smart Search</string>
    <string name="add_log">Add Log</string>
    <string name="tell_us_all_about_your_new_catch">Tell us all about your new catch !</string>
    <string name="i_think_this_is_a">I think this is a</string>
    <string name="_0_1">0.1</string>
    <string name="lbs">lbs</string>
    <string name="this_weighs_around">This weighs around</string>
    <string name="largemouth_bass">Largemouth Bass</string>
    <string name="share_your_story">Share your story</string>
    <string name="it_was_worth_the_wait">It was worth the wait…</string>
    <string name="log_entry">Log Entry</string>
    <string name="it_s_length_is_about">It\'s length is about</string>
    <string name="cms">cms</string>
    <string name="_1">1</string>
    <string name="tags_optional">Tags (optional)</string>
    <string name="solo_personal_best">\'Solo\', \'Personal Best\', …</string>
    <string name="tap_on_a_tag_to_remove_it">Tap on a tag to remove it.</string>
    <string name="tap_on_the_image_to_retake_or_long_press_to_remove_it">Tap on the image to retake or long press to remove it.</string>
    <string name="no_catches_yet_nreel_one_in_to_start_your_fishing_journey">No catches yet!\nReel one in to start your fishing journey.</string>
    <string name="search">Search</string>
    <string name="e_g_solo_big_catch">e.g. Solo, Big Catch</string>
    <string name="tags">Tags (Comma Separated)</string>
    <string name="length_ranging_to">Length ranging to</string>
    <string name="length_ranging_from">Length ranging from</string>
    <string name="weight_ranging_to">Weight ranging to</string>
    <string name="weight_ranging_from">Weight ranging from</string>
    <string name="e_g_largemouth_bass">e.g. Largemouth Bass</string>
    <string name="fish_name">Fish Name</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="caught_within">Caught within</string>
    <string name="best_for_trouts">Best for trouts</string>
    <string name="short_description">Short Description</string>
    <string name="checkpoint_label">Checkpoint Label</string>
    <string name="north_lake">North Lake</string>
    <string name="saved_checkpoints">Saved Checkpoints</string>
    <string name="no_saved_checkpoints_save_them_now_to_access_them_offline_later">No saved checkpoints. Save them now to access them offline later.</string>
    <string name="login">Let’s Go Fishing</string>
    <string name="back_to_the_dock">Back to the Dock? If not, let’s reel you in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="default_web_client_id">41851133212-ghh8b1jb43fkpe7degn8hk01n2leti7t.apps.googleusercontent.com</string>
    <string name="verification_email_sent_please_verify_and_try_logging_in_again">Verification email sent. Please verify and try logging in again.</string>
    <string name="sign_out">Sign Out</string>
    <string name="super_angler">Super Angler !</string>
    <string name="ok">OK</string>
</resources>