<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/record_catch_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_catch"
            android:textSize="22sp"
            android:textStyle="bold"
            android:drawablePadding="8dp"
            android:paddingVertical="4dp"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/record" />

        <TextView
            android:id="@+id/angler_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/angler"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_record_catch_angler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_record_catch_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_record_catch_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_record_catch_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingBottom="4dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_record_catch_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="12dp"
            android:visibility="visible" />

        <Button
            android:background="@drawable/light_button_bg"
            android:id="@+id/ok_button"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textStyle="bold"
            android:layout_gravity="end" />

    </LinearLayout>

</ScrollView>
