<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tell_us_all_about_your_new_catch"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_think_this_is_a"
                android:textColor="#636363"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/largemouth_bass"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp"
                android:textColorHint="#ccc"
                android:imeOptions="actionDone"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleText" />

            <TextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_weighs_around"
                android:textColor="#636363"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/weight_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:labelBehavior="gone"
                style="@style/Widget.MaterialComponents.Slider"
                android:value="0.1"
                android:valueFrom="0.1"
                android:valueTo="100.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_title" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_0_1"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_slider" />

            <TextView
                android:id="@+id/weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbs"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/weight"
                app:layout_constraintBottom_toBottomOf="@id/weight"
                app:layout_constraintStart_toEndOf="@id/weight"/>

            <TextView
                android:id="@+id/length_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/it_s_length_is_about"
                android:textColor="#636363"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/weight"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/length_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:labelBehavior="gone"
                style="@style/Widget.MaterialComponents.Slider"
                android:value="5.0"
                android:valueFrom="5.0"
                android:valueTo="150.0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/length_title" />

            <TextView
                android:id="@+id/length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/length_slider" />

            <TextView
                android:id="@+id/length_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cms"
                android:textColor="#636363"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/length"
                app:layout_constraintBottom_toBottomOf="@id/length"
                app:layout_constraintStart_toEndOf="@id/length"/>

            <TextView
                android:id="@+id/descText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_your_story"
                android:textColor="#636363"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/length"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/descTextInput"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="5"
                android:gravity="top|start"
                android:scrollbars="none"
                android:hint="@string/it_was_worth_the_wait"
                android:importantForAutofill="no"
                android:textColorHint="#ccc"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descText" />

            <TextView
                android:id="@+id/tag_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tags_optional"
                android:textColor="#636363"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/descTextInput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/tag_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/solo_personal_best"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="16sp"
                android:textColorHint="#ccc"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_field_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag_title" />

            <TextView
                android:id="@+id/mini_info_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_on_a_tag_to_remove_it"
                android:textColor="#636363"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="2dp"
                app:layout_constraintTop_toBottomOf="@id/tag_text"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/tag_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:layout_marginTop="2dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintTop_toBottomOf="@+id/mini_info_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            </com.google.android.flexbox.FlexboxLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:background="@drawable/take_photo_bg"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag_container"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/mini_info_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_on_the_image_to_retake_or_long_press_to_remove_it"
                android:textColor="#636363"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/log_entry"
                android:enabled="false"
                android:alpha="0.4"
                android:stateListAnimator="@null"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/mini_info_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>