<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg"
        android:alpha="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:paddingHorizontal="30dp"
        android:gravity="center"
        android:text="@string/back_to_the_dock"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_field_title"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:visibility="gone"
        android:paddingHorizontal="60dp"
        android:text="@string/verification_email_sent_please_verify_and_try_logging_in_again"
        android:textColor="#ff0000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:alpha="0.4"
        android:textSize="16sp"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/login"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
