<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FishLogsActivity">

    <ImageView
        android:id="@+id/all_logs"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/all_logs"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_logs"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/all_logs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/smart_search"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="80dp"
        app:srcCompat="@drawable/smart_search"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/all_logs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smart_search"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/smart_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/add_log"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="80dp"
        app:srcCompat="@drawable/add_log"
        android:importantForAccessibility="no"
        app:layout_constraintTop_toBottomOf="@id/smart_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_log"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/add_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>